added a tag in the head

--- a/submissions/alexdefender/html5-order-form/css/main.css
+++ b/submissions/alexdefender/html5-order-form/css/main.css
@@ -21,30 +21,35 @@ body {
   padding-inline-start: 0;
 }
 
+.header__nav__items a {
+  text-decoration: none;
+}
+
 .icon {
   content: "";
   background-repeat: no-repeat;
-  background-size: 70%;
+  background-size: 25%;
   height: 24px;
-  width: 26px;
-  left: 25px;
-  top: 16px;
+  width: 70px;
+  left: 40px;
   position: absolute;
+  text-align: right;
+  color: #a5abc4;
 }
 
-.link__back {
+.icon__back {
   background-image: url(../font/icon-back.png);
-  left: 20px;
-  top: 17px;
+  background-position-y: 2px;
 }
 
 .icon__sing-in {
   background-image: url(../font/icon-sing-in.png);
-  top: 10px;
-  left: 20px;
+  background-position-y: -2px;
 }
 
-.btn, .header__back {
+.btn,
+.header__back,
+.header__sing-in {
   position: relative;
   background-color: #ebedf2;
   border: 1px solid #cad1e0;
@@ -57,28 +62,19 @@ body {
   color: #a5abc4;
 }
 
-.btn:hover, .header__back:hover {
+.header__back,
+.header__sing-in {
+  padding-bottom: 25px;
+}
+
+.btn:hover,
+.header__back:hover, 
+.header__sing-in:hover {
   border-color: #77a8e0;
   will-change: border-color;
   transition: border-color 0.3s ease-out;
   cursor: pointer;
 }
-
-.header__back {
-  padding-top: 17px;
-  padding-bottom: 25px;
-  width: 110px;
-}
-
-
-.header__back-text {
-  position: absolute;
-  color: #a5abc4;
-  text-decoration: none;
-  left: 50px;
-  
-}
-
 
 /* ----------------- Start Form ----------------- */
 
@@ -134,9 +130,9 @@ body {
 .translate__input:focus + .translate__img-wrapper,
 .upload__file-hidden:focus + .upload__file,
 .tone__input:focus + .tone__text,
-.translate__input:focus + .payment__img,
+.payment__input-radio:focus + .payment__img,
 .language-select:focus {
-  outline: 2px solid #77a8e0; 
+  outline: 2px solid #77a8e0;
 }
 
 footer {
