--- a/submissions/CrazyPike/formss/_footer.scss
+++ b/submissions/CrazyPike/formss/_footer.scss
@@ -6,6 +6,7 @@
   background-color: rgba(68,74,98,1);
   padding-top: 100px;
   color: white;
+  min-width: 1140px;
 }
 
 .footer__container{
@@ -37,6 +38,7 @@
   align-self: center;
   margin-right: 10px;
   text-transform: uppercase;
+  font-style: italic;
 }
 
 .footer__item-content{
