--- a/submissions/CrazyPike/formss/_section-languages.scss
+++ b/submissions/CrazyPike/formss/_section-languages.scss
@@ -34,7 +34,7 @@
   font-size: 16px;
   font-family: sans-serif;
   font-weight: 700;
-  color: #444;
+  color: #c4c4c4;
   line-height: 1.3;
   padding: .6em 1.4em .5em 2.8em;
   width: 200px;
@@ -47,12 +47,10 @@
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background-color: #fff;
-  background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-  linear-gradient(to bottom, #eceef4 0%,#eceef4 100%);
+  background-color:  #eaecf4;
+  background-image: url("data:image/svg+xml,%3Csvg width='50' height='50' viewBox='0 0 50 50' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='50' height='50' fill='%23EAECF4'/%3E%3Cpath d='M25 30L20.6699 22.5H29.3301L25 30Z' fill='%23C4C4C4'/%3E%3Crect width='1' height='50' fill='%23C4C4C4'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat, repeat;
-  background-position: right .7em top 50%, 0 0;
-  background-size: .65em auto, 100%;
+  background-position: right 0em top 50%, 0 0;
 }
 
 .section-languages__select:hover {
