--- a/submissions/krash1408/html5form/style.css
+++ b/submissions/krash1408/html5form/style.css
@@ -35,7 +35,7 @@ body {
   font-size: 1.4rem;
   cursor: pointer;
   will-change: color;
-  transition: color 0.3s linear;
+  transition: color 0.3s;
 }
 .main-link:hover {
   text-decoration: underline;
@@ -106,7 +106,7 @@ body {
   border-left: 1px solid rgb(175, 175, 175);
   background-color: white;
 }
-.dropdown-menu-btn__label {
+.more-services-btn__label {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,22 +115,24 @@ body {
   min-height: 3.6rem;
   position: absolute;
   bottom: 0;
+  left: 0;
   background-color: rgba(230, 230, 230, 0.671);
   font-size: 1.4rem;
   cursor: pointer;
-  transition: background-color 0.3 linear;
+  transition: background-color 0.3s;
 }
-.dropdown-menu-btn__label:hover {
+.more-services-btn__label:hover {
   background-color: #8a8a8aab;
 }
-.dropdown-menu-btn:focus + .dropdown-menu-btn__label {
+.more-services-btn:focus + .more-services-btn__label {
   background-color: #8a8a8aab;  
 }
 
-.dropdown-menu__wrapper,
-.more-services__list {
+.dropdown-menu__wrapper {
   width: 100%;
+  height: 100%;
   display: flex;
+  overflow-y: scroll;
   justify-content: space-around;
   flex-flow: row wrap;
 }
@@ -146,6 +148,9 @@ body {
   justify-content: center;
   align-items: center;
 }
+.more-services__item {
+  display: none;
+}
 .dropdown-menu__svg {
   width: 6rem;
   height: 6rem;
@@ -159,13 +164,10 @@ body {
   border-radius: 0.2rem;
 }
 
-/* Механика */
+
 .menu-btn:checked ~ .dropdown-menu {
   display: flex;
 }
-.dropdown-menu-btn:checked ~ .dropdown-menu__wrapper {
-  overflow-y: scroll;
-}
-.dropdown-menu-btn:checked ~ .dropdown-menu__wrapper > .more-services__list {
+.more-services-btn:checked ~ .more-services__item {
   display: flex;
 }
