--- a/submissions/krash1408/html5form/style.css
+++ b/submissions/krash1408/html5form/style.css
@@ -10,13 +10,13 @@ body {
   padding: 0;
 }
 .visually-hidden {
-  position: absolute !important;
-  clip: rect(0px 0px 0px 0px); /* IE6, IE7 */
-  clip: rect(0px, 0px, 0px, 0px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
+  position: absolute;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
   overflow: hidden;
 }
 
