--- a/submissions/IrynaY/react-friends-app/src/components/character-list/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/character-list/style.css
@@ -8,3 +8,12 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.notFound{
+  margin:auto;
+  padding: 150px;
+  font-size: 228px;
+  font-weight: bold;
+  color: blueviolet;
+  transform: rotate(-25deg);
+}
