--- a/submissions/IrynaY/react-friends-app/src/components/character-info/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/character-info/style.css
@@ -1,11 +1,13 @@
 .character-info {
-  margin: 25px;
-  padding: 15px;
-  max-width: 250px;
+  margin: 5px 10px;
+  padding: 0 15px 15px 10px;
+  max-width: 150px;
   display: flex;
   flex-direction: column;
   border: 1px solid gray;
   border-radius: 15px;
+  flex-wrap: wrap;
+  font-size: 14px;
 }
 
 .character-info .title {
