--- a/submissions/IrynaY/react-friends-app/src/components/filter/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/filter/style.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   min-width: 200px;
 }
+
+.filter-section input[type='search']{
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 5px;
+}
