--- a/submissions/IrynaY/react-friends-app/src/components/character-list/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/character-list/style.css
@@ -1,5 +1,6 @@
 .content {
   text-align: center;
+  margin: auto;
 }
 
 .character-list {
@@ -10,10 +11,7 @@
 }
 
 .notFound{
-  margin:auto;
-  padding: 150px;
-  font-size: 228px;
+  font-size: 28px;
   font-weight: bold;
-  color: blueviolet;
-  transform: rotate(-25deg);
+  padding: 40px 150px;
 }
