--- a/submissions/IrynaY/react-friends-app/src/components/filter/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/filter/style.css
@@ -1,6 +1,4 @@
 .filter-section {
-  display: flex;
-  flex-direction: column;
   min-width: 200px;
 }
 
@@ -8,4 +6,16 @@
   margin: 10px 0;
   padding: 5px;
   border-radius: 5px;
+}
+
+.filter-section fieldset{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid lightblue;
+  border-radius: 15px;
+  margin-top: 15px;
+}
+
+.filter-section label:hover {
+  cursor: pointer;  
 }
