--- a/submissions/IrynaY/react-friends-app/src/components/pagination/style.css
+++ b/submissions/IrynaY/react-friends-app/src/components/pagination/style.css
@@ -2,7 +2,23 @@
   justify-content: center;
 }
 
-.page-list button{
-  padding: 5px 8px;
+.page-list button,
+.current-page {
+  padding: 8px 15px;
   margin: 5px;
+}
+.page-list button{
+  border: 1px solid lightblue;
+  background-color: white;
+  border-radius:  15px;
+}
+
+.page-list button:hover,
+.checked {
+  background-color: lightblue;
+  cursor: pointer;  
+}
+
+.page-list button:focus{
+  outline:none;
 }
