--- a/submissions/nazmariam/kottanterest/components/Header/style.css
+++ b/submissions/nazmariam/kottanterest/components/Header/style.css
@@ -1,14 +1,13 @@
-html{
+html {
   font-family: sans-serif;
 }
-.header{
-  width:100%;
-  /*background-color: red;*/
+.header {
+  width: 100%;
   display: flex;
   align-items: center;
   margin: 16px 0;
 }
-.logo{
+.logo {
   -webkit-border: 1px solid red;
   -moz-border: 1px solid red;
   border: 1px solid red;
@@ -20,17 +19,17 @@ html{
   line-height: 16px;
   padding: 8px;
 }
-.logo img{
+.logo img {
   width: 40px;
 }
-.search-form{
+.search-form {
   width: 60%;
   margin: 0 32px;
 }
-label{
+label {
   position: relative;
 }
-.search-input{
+.search-input {
   width: 100%;
   height: 40px;
   border-radius: 8px;
@@ -40,12 +39,12 @@ label{
   font-size: 1.2em;
   color: #6b6b6b;
 }
-.search-input::placeholder{
+.search-input::placeholder {
   color: #848484;
 }
-label:before{
+label:before {
   background: url("./images/search.svg") center no-repeat;
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 8px;
@@ -54,15 +53,15 @@ label:before{
   height: 16px;
   opacity: 0.5;
 }
-.submit-button{
+.submit-button {
   width: 20%;
 }
-.sorting-buttons{
+.sorting-buttons {
   margin: 0 32px;
   display: flex;
 }
 #decrease,
-#increase{
+#increase {
   color: #fff;
   background-color: #8080807a;
   border: 2px dotted #ffffff;
@@ -76,12 +75,11 @@ label:before{
 }
 
 #decrease:hover,
-#increase:hover{
+#increase:hover {
   background-color: rgba(128, 128, 128, 0.72);
 }
-@media screen and (max-width: 500px){
-  .sorting-buttons{
+@media screen and (max-width: 500px) {
+  .sorting-buttons {
     margin: 0;
   }
-  
 }
