--- a/submissions/nazmariam/kottanterest/components/ImageList/style.css
+++ b/submissions/nazmariam/kottanterest/components/ImageList/style.css
@@ -1,22 +1,21 @@
-
 @keyframes rt {
   from {
-    top:-20px
+    top: -20px;
   }
   to {
-    top: 0
+    top: 0;
   }
 }
 
-.wrapper{
-  column-count:4;
+.wrapper {
+  column-count: 4;
   column-width: 200px;
 }
-.card{
+.card {
   margin-bottom: 16px;
   position: relative !important;
 }
-.user-link{
+.user-link {
   position: absolute;
   bottom: 16px;
   left: 16px;
@@ -27,15 +26,15 @@
   color: #fff;
   opacity: 0;
 }
-.rate{
+.rate {
   position: absolute;
   color: #fff;
   background-color: red;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  top:0;
-  right:16px;
+  top: 0;
+  right: 16px;
   font-weight: bolder;
   width: 32px;
   height: 32px;
@@ -43,7 +42,7 @@
   line-height: 32px;
   opacity: 0;
 }
-.unsplash-link{
+.unsplash-link {
   color: #cecece;
   text-decoration: none;
   position: absolute;
@@ -53,19 +52,19 @@
   font-size: 0.9em;
   opacity: 0;
 }
-.card:hover > .user-link{
+.card:hover > .user-link {
   opacity: 1;
-  transition: opacity .15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
-.card:hover > .rate{
+.card:hover > .rate {
   opacity: 1;
-  transition: opacity .15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
-.card:hover > .unsplash-link{
+.card:hover > .unsplash-link {
   opacity: 1;
-  transition: opacity .15s ease-in-out;
+  transition: opacity 0.15s ease-in-out;
 }
-.card-img-top{
+.card-img-top {
   width: 100%;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -73,10 +72,10 @@
   display: block;
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px) {
   .user-link,
   .rate,
-  .unsplash-link{
+  .unsplash-link {
     opacity: 1;
   }
 }
