--- a/submissions/olek557/react-friends-app/src/Filters.css
+++ b/submissions/olek557/react-friends-app/src/Filters.css
@@ -1,13 +1,13 @@
 .filters {
   border-radius: 3px;
   max-width: 1200px;
-  margin: 20px;
+  margin: 20px auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
   box-shadow: 0px 0px 4px 2px #0000001f;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 
 .filters:hover {
